--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,25 +2,101 @@
 <html>
 <head>
   <title>SampleApp</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<nav>
-	<ul>
-		<li>Home</li>
-		<li>About</li>
-		<li>Contact</li>
-	</ul>
+<nav class="navbar">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">BIKE BERLIN</a>
+</a>
+    </div>
+
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">About Us</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">What We Do <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Used Bikes</a></li>
+            <li><a href="#">Bike Repair</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Races</a></li>
+          </ul>
+          <li><a href="#">Contact Us</a></li>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
 
 <%= yield %>
 
-<footer>
-	&copy; 2015 Bike Berlin
+
+
+
+<!-- footer -->
+
+<footer class="footer">
+    <nav class="navbar navbar-default navbar-custom">
+        <div class="container-fluid">
+            <div class="nav navbar-nav navbar-right">
+                <ul class="footerright">
+                    <li>
+                        <a href="">Link 4</a>
+                    </li>
+                    <li>
+                        <a href="">Link 5</a>
+                    </li>
+                    <li>
+                        Text
+                    </li>
+                </ul>
+            </div>
+
+            <div class="nav navbar-nav navbar-left">
+                <ul class="footerleft">
+                    <li>
+                        <a href="">Link 1</a>
+                    </li>
+                    <li>
+                        <a href="">Link 2</a>
+                    </li>
+                    <li>
+                        <a href="">Link 3</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="text-center">
+                <a href=""><%= image_tag("facebook.png", :alt => "facebook") %></a>
+                <a href=""><%= image_tag("twitter.png", :alt => "facebook") %></a>
+                <a href=""><%= image_tag("instagram.png", :alt => "facebook") %></a>
+                <a href=""><%= image_tag("pinterest.png", :alt => "facebook") %></a>
+            </div>
+
+        </div>
+
+    </nav>
 </footer>
+      
 
 </body>
 </html>
