--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,10 +16,15 @@
         <p><%= link_to 'Show', product %></p>
         <p><%= link_to 'Edit', edit_product_path(product) %></p>
         <p><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      </div><!-- /col -->
+      </div>
     <% end %>
   </div>
 </div>
+
+
+
+<!-- updated for carousel -->
+
 
 <!-- <table>
   <thead>
