--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -4,13 +4,18 @@
   
 
   <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    
-  </ol>
+ 
 
+
+<ol class="carousel-indicators">
+<% @products.each_with_index do |item, index| %>
+<% if index == 0 %>
+<li data-target="#carousel-example-generic" data-slide-to="<%= index %>" class="active"></li>
+
+<% else %>
+<li data-target="#carousel-example-generic" data-slide-to="<%= index %>"></li>
+<% end %>
+<% end %>
 
   <!-- Wrapper for slides -->
 
