--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,16 +20,32 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://alexandramae.herokuapp.com/">BIKE BERLIN</a>
+      <a class="navbar-brand" href="http://alexandramae.herokuapp.com/">THE MAGIC SHOP</a>
 </a>
     </div>
 
-      <form class="navbar-form navbar-right" role="search">
+      <!-- <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
+
+
+<!-- when i put the below section within these form tags it stops working
+<form class="navbar-form navbar-right" role="search"> -->
+<!-- </form> -->
+
+
+<!-- add new rails search form - working without css -->
+<div class="navbar-form navbar-right" role="search">
+<%= form_tag("/products", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+</div>
+
       <ul class="nav navbar-nav navbar-right">
         <li><a href="http://alexandramae.herokuapp.com/products">Products</a></li>
         <li class="dropdown">
