--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,5 +1,7 @@
 <h2>On Sale Now</h2>
 
+<%= params[:example_key] %>
+
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   
 
