--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -57,6 +57,21 @@ body {
 }
 
 
+.signup {
+  text-align: center;
+  vertical-align: middle;
+  border-color: #000;
+  border-width: 5px;
+  border-style: dotted;
+  margin-top: 15%;
+  margin-bottom: 25%;
+  background-color: #000;
+  color: #fff;
+  margin-left: 25%;
+  padding: 50px;
+
+}
+
 /* footer styles */ 
 footer {
   position: absolute;
