--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
 </head>
 <body>
 
+
+<!-- flash tags added in authentication lesson -->
+<p class="notice"><%= notice %></p> -->
+<p class="alert"><%= alert %></p>
+
 <nav class="navbar">
 	  <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -58,7 +63,20 @@
           </ul>
           <li><a href="http://alexandramae.herokuapp.com/static_pages/contact">Contact Us</a></li>
         </li>
+        
       </ul>
+  
+ <!--  added logout if user logs in -->
+<ul class="nav navbar-nav navbar-right navbar-right">
+  <li>
+  <% if user_signed_in? %>
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+  <% else %>
+    <%= link_to('Login', new_user_session_path) %>
+  <% end %>
+  </li>
+</ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
