finished styling login pages

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,24 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 h2 {
-	font-family: helvetica;
-	letter-spacing: 2px;
+	color: #696969;
+	text-transform: uppercase;
+	letter-spacing: 0.07em;
+}
+
+
+.signupbox {
+	border: 10px solid #FF69B4;
+	text-align: center;
+	background-color: #D3D3D3;
+	color: #000;
+}
+
+.login {
+	width: 400px;
+	border: 1px solid #696969;
+	margin: auto;
+	margin-top: 50px;
+	background-color: #D3D3D3;
 	text-align:center;
 }
