--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,37 @@
+<div class="container-fluid login">
 
-<h2>Sign up</h2>
-
-<form class="form-horizontal">
+<div class="header"><h2>Sign up</h2></div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">
+  <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true %>
-    </label>
   </div>
 
-  <div class="field form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">
+  <div class="field">
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
       <%= f.password_field :password, autocomplete: "off" %>
-    </label>
   </div>
 
-  <div class="field form-group">
+  <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">
-        <%= f.submit "Sign up" %>
-      </button>
+ <div class="field">
+         <%= f.submit "Sign up" %>
   </div>
-  </div>
+
+
 <% end %>
 
+<div class="field">
 <%= render "devise/shared/links" %>
 </div>
 
-</form>
-
+</div>
