--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
 
 
 <!-- flash tags added in authentication lesson -->
-<p class="notice"><%= notice %></p> -->
-<p class="alert"><%= alert %></p>
+<% if notice %>
+    <p id="notice" class="alert alert-info"><%= notice %></p>
+<% end %>
+
+<% if alert %>
+    <p id="alert" class="alert alert-info"><%= alert %></p>
+<% end %>
+
 
 <nav class="navbar">
 	  <!-- Brand and toggle get grouped for better mobile display -->
