--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,16 +58,16 @@
 </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://alexandramae.herokuapp.com/products">Products</a></li>
+        <li><a href="/products">Products</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">What We Do <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="http://alexandramae.herokuapp.com/static_pages/about">About Us</a></li>
+            <li><a href="/about">About Us</a></li>
             <li><a href="#">Bike Repair</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Races</a></li>
           </ul>
-          <li><a href="http://alexandramae.herokuapp.com/static_pages/contact">Contact Us</a></li>
+          <li><a href="/contact">Contact Us</a></li>
         </li>
         
       </ul>
